--- a/src/main/resources/templates/myBooks.html
+++ b/src/main/resources/templates/myBooks.html
@@ -33,20 +33,34 @@
             </div>
         </nav>
 
-        <!--  ---------------text--------------- -->
-        <div class="container text-center">
-            <h1 class="mt-5">Welcome to new book store</h1>
-            <h6 class="mt-3">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eu est finibus, dapibus lorem sed,
-                commodo enim. Curabitur dapibus dolor nunc, quis accumsan ante euismod nec. Pellentesque vel tincidunt augue.
-                Cras id feugiat odio. Integer in ligula vel nunc aliquet efficitur id at lectus. Integer dolor nisi, accumsan
-                auctor eros nec, feugiat volutpat quam. Morbi sed justo dui.
-            </h6>
+        <!--  ---------------table--------------- -->
+        <div class="container my-5 col-md-6">
+            <table class="table table-stiped table-hover">
+                <thead>
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Author</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Action</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="b :${book}">
+                    <td th:text="${b.id}"></td>
+                    <td th:text="${b.name}"></td>
+                    <td th:text="${b.author}"></td>
+                    <td th:text="${b.price}"></td>
+                    <td><a href="/"><i class="fa-solid fa-trash"></i></a></td>
+                </tr>
+                </tbody>
+            </table>
         </div>
 
         <!--  ---------------scripts--------------- -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/f19bfe7f5e.js" crossorigin="anonymous"></script>
     </body>
 </html>
