--- a/src/main/resources/templates/bookEdit.html
+++ b/src/main/resources/templates/bookEdit.html
@@ -33,39 +33,33 @@
             </div>
         </nav>
 
-        <!--  ---------------table--------------- -->
-        <div class="container my-5 col-md-6">
-            <table class="table table-stiped table-hover">
-                <thead>
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Author</th>
-                    <th scope="col">Price</th>
-                    <th scope="col">Action</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="b :${book}">
-                    <td th:text="${b.id}"></td>
-                    <td th:text="${b.name}"></td>
-                    <td th:text="${b.author}"></td>
-                    <td th:text="${b.price}"></td>
-                    <td>
-                        <a th:href="@{/mylist/{id}(id=${b.id})}"><i class="fa-solid fa-plus"></i></a>
-                        <a th:href="@{/editBook/{id}(id=${b.id})}"><i class="fa-solid fa-pen-to-square ms-3"></i></a>
-                        <a th:href="@{/deleteBook/{id}(id=${b.id})}"><i class="fa-regular fa-trash ms-3"></i></a>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
+        <!--  ---------------edit form--------------- -->
+        <div class="container my-5 p-5" style="border:0.5px solid black; border-radius:20px;">
+            <h4 class="text-center">Edit Book</h4>
+            <form class="col-md-4 offset-md-4" th:action="@{/save}" method="post" th:object="${book}">
 
+                <input type="hidden" name="id" th:value="${book.id}">
+
+                <div class="mb-3">
+                    <label for="name" class="form-label">Name</label>
+                    <input type="text" class="form-control" name="name" th:value="${book.name}">
+                </div>
+                <div class="mb-3">
+                    <label for="author" class="form-label">Autor</label>
+                    <input type="text" class="form-control" name="author" th:value="${book.author}">
+                </div>
+                <div class="mb-3">
+                    <label for="price" class="form-label">Price</label>
+                    <input type="text" class="form-control" name="price" th:value="${book.price}">
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-secondary" href="/">Back</button>
+            </form>
+        </div>
 
         <!--  ---------------scripts--------------- -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-        <script src="https://kit.fontawesome.com/f19bfe7f5e.js" crossorigin="anonymous"></script>
     </body>
 </html>
