--- a/src/main/resources/templates/myBooks.html
+++ b/src/main/resources/templates/myBooks.html
@@ -51,7 +51,7 @@
                     <td th:text="${b.name}"></td>
                     <td th:text="${b.author}"></td>
                     <td th:text="${b.price}"></td>
-                    <td><a th:href="@{/deleteMyList/{id}(id=${b.id})}"><i class="fa-solid fa-trash"></i></a></td>
+                    <td><a th:href="@{/deleteMyList/{id}(id=${b.id})}"><i class="fa-regular fa-trash"></i></a></td>
                 </tr>
                 </tbody>
             </table>
